--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section>
     <h3 class="display-4" style="font-family: Roboto; margin-left:10;">gaseste-ti frizerul potrivit</h3>
     <h3 class="display-5" style="font-family: Brush Script MT; color: #198754;">Pentru tine</h3> 
-    <h5 style="text-align: center;">credem că atunci când arăți bine, te simți bine. De aceea oferim servicii de coafat pentru bărbați și copii. Vrem să vă ajutăm să părăsiți salonul arătând ca o persoană nouă</h5>
+    <h5 style="text-align: center;">Credem că atunci când arăți bine, te simți bine. De aceea oferim servicii de coafat pentru bărbați și copii. Vrem să vă ajutăm să părăsiți salonul arătând ca o persoană nouă</h5>
     <div class="container">
       <img src="photos/tuns_model.jpg" width: 150; height= 350;>
       <button onclick="window.location.href='galerie.html';" class="btn">more</button>
