--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="locatie.html">Locatie</a>
               <a class="nav-link" href="preturi.html">Preturi</a>
               <a class="nav-link" href="galerie.html">Galerie</a>
-              <button onclick="window.location.href='https://stailer.ro/profil/dylpjftc';" class="btn btn-outline-success me-2" type="button" >Programeaza-te</button>
+              <button data-modal-target="modal1" class="btn btn-outline-success me-2" type="button" >Programeaza-te</button>
             </div>
           </div>
         </div>
@@ -36,9 +36,21 @@
       <img src="photos/tuns_model.jpg" width: 150; height= 350;>
       <button onclick="window.location.href='galerie.html';" class="btn">more</button>
     </div>
+
+    
+
+    <div class="modal" id="modal1"> 
+      <div class="modal-content"> 
+        <span class="modal-close">&times;</span>
+        <h1>Suna</h1>
+        <H3>0754 631 153</H3>
+        <button href="tel:+05890000111" class="btn btn-outline-success me-2" type="button" >Suna</button>
+      </div>
+    </div>
   </section>      
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
