--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="modal-close">&times;</span>
         <h1>Suna</h1>
         <H3>0754 631 153</H3>
-        <button href="tel:+05890000111" class="btn btn-outline-success me-2" type="button" >Suna</button>
+        <button class="btn btn-outline-success me-2" type="button" ><a href="tel:07754631153" style="text-decoration: none; color: #198754;">Suna</a></button>
       </div>
     </div>
   </section>      
